--- a/ConatinaerAdaptors/webdavserver/webdavserver/package.json
+++ b/ConatinaerAdaptors/webdavserver/webdavserver/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "fileagent",
+  "name": "webdavserver",
   "version": "0.0.1",
   "description": "handles files",
-  "main": "fileagent.js",
+  "main": "webdavserver.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -20,6 +20,7 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "fs": "0.0.1-security",
+    "http": "0.0.0",
     "jsDAV": "^0.3.4",
     "md5-file": "^4.0.0",
     "stats": "^1.0.0"
