--- a/UserPods/SimpleUserPod.yml.template
+++ b/UserPods/SimpleUserPod.yml.template
@@ -1,30 +1,33 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: mc2
+  name: mi##ID##
 spec:
   volumes:
   - name: shared-data
     emptyDir: {}
-  - name: ssh
+  - name: ssh-pro
     secret:
-        secretName: ssh-key
+        secretName: ssh-key-pro
+  - name: ssh-lisa
+    secret:
+        secretName: ssh-key-lisa
   containers:
-  - name: 1st
+  - name: a1
     image: process/sshfs:v0.1
     ports:
         - containerPort: 3001
     env:
         - name: SSH_USER
-          value: "##SSH_USER##"
+          value: "##SSH_USER_A##"
         - name: SSH_HOST
-          value: '##SSH_HOST##'
+          value: '##SSH_HOST_A##'
         - name: SSH_PATH
           value: ''
     volumeMounts:
     - name: shared-data
       mountPath: /shared-data
-    - name: ssh
+    - name: ssh-pro
       mountPath: /ssh
       readOnly: true
     securityContext:
@@ -34,13 +37,41 @@ spec:
                 - SYS_ADMIN
     command: ["/bin/sh", "-c"]
     args: ["/bin/cat /ssh/id_rsa > /root/.ssh/id_rsa && /bin/cat /ssh/id_rsa.pub > /root/.ssh/id_rsa.pub && /bin/cat /ssh/known_hosts > /root/.ssh/known_hosts && /bin/chmod 600 /root/.ssh/id_rsa && sshfs $SSH_USER@$SSH_HOST:$SSH_PATH /data && /bin/mkdir /shared-data/$SSH_HOST && cd /root/fileagent && node fileagent /data/ /shared-data/$SSH_HOST/ 3001"]
-  - name: 2nd
-    image: debian
+  - name: a2
+    image: process/sshfs:v0.1
+    ports:
+        - containerPort: 3003
+    env:
+        - name: SSH_USER
+          value: "##SSH_USER_B##"
+        - name: SSH_HOST
+          value: '##SSH_HOST_B##'
+        - name: SSH_PATH
+          value: ''
+    volumeMounts:
+    - name: shared-data
+      mountPath: /shared-data
+    - name: ssh-lisa
+      mountPath: /ssh
+      readOnly: true
+    securityContext:
+        privileged: true
+        capabilities:
+            add:
+                - SYS_ADMIN
+    command: ["/bin/sh", "-c"]
+    args: ["/bin/cat /ssh/id_rsa > /root/.ssh/id_rsa && /bin/cat /ssh/id_rsa.pub > /root/.ssh/id_rsa.pub && /bin/cat /ssh/known_hosts > /root/.ssh/known_hosts && /bin/chmod 600 /root/.ssh/id_rsa && sshfs $SSH_USER@$SSH_HOST:$SSH_PATH /data && /bin/mkdir /shared-data/$SSH_HOST && cd /root/fileagent && node fileagent /data/ /shared-data/$SSH_HOST/ 3003"]
+  - name: u1
+    image: process/webdav:v0.1
+    ports:
+        - containerPort: 3002
     volumeMounts:
     - name: shared-data
       mountPath: /all-data
+    securityContext:
+        privileged: true
+        capabilities:
+            add:
+                - SYS_ADMIN
     command: ["/bin/sh", "-c"]
-    args:
-      - while true; do
-          sleep 1;
-        done
+    args: ["/bin/mkdir /data/##SSH_HOST_A## /data/##SSH_HOST_B## && echo 'http://localhost:3001 u p\n'  >> /etc/davfs2/secrets && echo 'http://localhost:3003 u p\n' >> /etc/davfs2/secrets && mount -t davfs http://localhost:3001 /data/##SSH_HOST_A## && mount -t davfs http://localhost:3003 /data/##SSH_HOST_B## && cd /root/webdavserver && node webdavserver.js"]
