--- a/ConatinaerAdaptors/webdavserver/Dockerfile
+++ b/ConatinaerAdaptors/webdavserver/Dockerfile
@@ -1,5 +1,5 @@
 FROM mhart/alpine-node:8
-RUN apk update && apk add davfs2 
+RUN apk update && apk add davfs2 && apk add git
 RUN mkdir /data
 RUN mkdir /root/.ssh
 ADD webdavserver /root/webdavserver
