--- a/ConatinaerAdaptors/webdavserver/webdavserver/package.json
+++ b/ConatinaerAdaptors/webdavserver/webdavserver/package.json
@@ -21,7 +21,7 @@
     "express": "^4.16.3",
     "fs": "0.0.1-security",
     "http": "0.0.0",
-    "jsDAV": "^0.3.4",
+    "jsDAV": "git+https://git@github.com/recap/jsDAV",
     "md5-file": "^4.0.0",
     "stats": "^1.0.0"
   }
