--- a/ConatinaerAdaptors/webdavserver/Dockerfile
+++ b/ConatinaerAdaptors/webdavserver/Dockerfile
@@ -1,6 +1,7 @@
 FROM mhart/alpine-node:8
 RUN apk update && apk add davfs2 && apk add git
 RUN mkdir /data
+RUN mkdir /assets
 RUN mkdir /root/.ssh
 ADD webdavserver /root/webdavserver
 RUN cd /root/webdavserver && npm install
