--- a/Services/core-query/Dockerfile
+++ b/Services/core-query/Dockerfile
@@ -1,5 +1,6 @@
 FROM mhart/alpine-node:8
 RUN mkdir /app
+RUN mkdir /assets
 ADD src/app.js /app/
 ADD src/index.html /app/
 ADD src/package.json /app/
