--- a/Services/core-query/Dockerfile
+++ b/Services/core-query/Dockerfile
@@ -1,6 +1,7 @@
 FROM mhart/alpine-node:8
 RUN mkdir /app
 RUN mkdir /assets
+RUN mkdir /shared-data
 ADD src/app.js /app/
 ADD src/index.html /app/
 ADD src/package.json /app/
