--- a/Services/core-query/src/package.json
+++ b/Services/core-query/src/package.json
@@ -33,6 +33,7 @@
     "request-promise": "^4.2.2",
     "socket.io": "^2.1.1",
     "ssh2": "^0.6.1",
+    "underscore": "^1.9.1",
     "webdav": "^2.2.0",
     "yaml": "^1.0.3"
   }
