--- a/Services/core-infra/Dockerfile
+++ b/Services/core-infra/Dockerfile
@@ -2,6 +2,7 @@ FROM mhart/alpine-node:8
 RUN mkdir /app
 RUN mkdir /app/deployments
 ADD src/app.js /app/
+ADD src/jupyter.js /app/
 ADD src/index.html /app/
 ADD src/package.json /app/
 WORKDIR /app
