--- a/ConatinaerAdaptors/lofar-stage/Dockerfile
+++ b/ConatinaerAdaptors/lofar-stage/Dockerfile
@@ -1,5 +1,5 @@
 FROM recap/process-general
-RUN apt-get update && apt-get install python python3 -y
+RUN apt-get update && apt-get install davfs2 python python3 -y
 WORKDIR /root/
 COPY api_python_module_1-0.tar.gz /root/
 RUN tar -zxf api_python_module_1-0.tar.gz
