--- a/ConatinaerAdaptors/scp2scp/app/package.json
+++ b/ConatinaerAdaptors/scp2scp/app/package.json
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^8.4.0",
     "k8s": "^0.4.15",
     "keypair": "^1.0.1",
+    "kue": "^0.11.6",
     "md5": "^2.2.1",
     "mongodb": "^3.1.10",
     "mongoose": "^5.3.13",
@@ -29,11 +30,10 @@
     "path": "^0.12.7",
     "persistent-cache-object": "^0.1.8",
     "randomstring": "^1.1.5",
-    "redis": "^2.8.0",
     "request": "^2.88.0",
     "request-promise": "^4.2.2",
     "socket.io": "^2.1.1",
-    "ssh2": "^0.6.1",
+    "ssh2": "^0.6.2",
     "underscore": "^1.9.1",
     "webdav": "^2.2.0",
     "yaml": "^1.0.3"
