First commit for the LOFAR staging service in lofar-stage. Service now stages upon request. Polling and calling webhook to core-query/proxy still needs to be written.

--- a/ConatinaerAdaptors/lofar-stage/Makefile
+++ b/ConatinaerAdaptors/lofar-stage/Makefile
@@ -1,11 +1,10 @@
-.PHONY: build
+.PHONY: all
 
 build:
-	docker build -t recap/process-lofar-stage:latest .
-
-push: build
-	docker push recap/process-lofar-stage
+	docker build -t lofar-staging .
 
 run: build
-	docker run -it --privileged recap/process-lofar-stage bash
-
+	-docker stop lofar-staging
+	docker run --name lofar-staging -d -p 8000:5000 --rm lofar-staging
+	docker ps
+#	docker run -it lofar-staging # sh
