Code from srm2local app.js based on scp2scp. srm2local now works without queue and reddis (next step), but directly based on call. README.md improved. lofar-stage code changed to show stdout from flask in docker logs. lofar-stage still in development, next step is building API for communication to data service core-query (proxy).

--- a/ConatinaerAdaptors/lofar-stage/Makefile
+++ b/ConatinaerAdaptors/lofar-stage/Makefile
@@ -5,6 +5,8 @@ build:
 
 run: build
 	-docker stop lofar-staging
-	docker run --name lofar-staging -d -p 8000:5000 --rm lofar-staging
+	docker run -t --name lofar-staging -d -p 8002:5000 --rm lofar-staging
 	docker ps
 #	docker run -it lofar-staging # sh
+
+# docker run -t and in Dockerfile python -u flags added so that print statements end up in docker log
