--- a/Services/core-query/src/package.json
+++ b/Services/core-query/src/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "amqp": "^0.2.7",
     "amqplib": "^0.5.2",
     "body-parser": "1.18.3",
     "command-line-args": "^5.0.2",
