Minor changes to lofar-stage service

--- a/ContainerAdaptors/lofar-stage/Dockerfile
+++ b/ContainerAdaptors/lofar-stage/Dockerfile
@@ -1,9 +1,11 @@
 FROM nikolaik/python-nodejs
 
 # Install LOFAR software
+ADD scripts/ scripts/
 RUN ./scripts/install-lofar-lta.sh
 
 # Install dependencies
+ADD Pipfile Pipfile
 RUN pipenv install --system --skip-lock
 
 # Add files
