--- a/ContainerAdaptors/scp2scp/Dockerfile
+++ b/ContainerAdaptors/scp2scp/Dockerfile
@@ -1,6 +1,7 @@
 FROM mhart/alpine-node:8
 RUN apk update && apk add sshfs
 RUN mkdir /data
+RUN mkdir /assets
 RUN mkdir /root/.ssh
 ADD app /root/app
 RUN cd /root/app && npm install
