--- a/ContainerAdaptors/webdavserver/webdavserver/package.json
+++ b/ContainerAdaptors/webdavserver/webdavserver/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "body-parser": "^1.18.3",
+    "command-line-args": "^5.1.1",
     "express": "^4.16.3",
     "fs": "0.0.1-security",
     "http": "0.0.0",
